<resources>
    <string name="app_name">Tell Me</string>

    <string name="api_key">fad0b02bb1f046e9bf2a754eed1e8c9a</string>
    <string name="source">source</string>
    <string name="category">category</string>
    <string name="article">article</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_general">General</string>
    <string name="nav_business">Business</string>
    <string name="nav_entertainment">Entertainment</string>
    <string name="nav_sports">Sports</string>
    <string name="nav_technology">Technology</string>
    <string name="nav_science">Science</string>
    <string name="nav_health">Health</string>


    <string name="q_general">general</string>
    <string name="q_business">business</string>
    <string name="q_entertainment">entertainment</string>
    <string name="q_sports">sports</string>
    <string name="q_technology">technology</string>
    <string name="q_science">science</string>
    <string name="q_health">health</string>
    <string name="dam_save">Save</string>
    <string name="mam_make_it_default">Make It Default</string>
    <string name="dam_delete">Delete</string>
    <string name="cashed_articles">Cashed Articles</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="nothing_to_show">Nothing To Show !</string>
    <string name="article_image">article image</string>
    <string name="home">Home</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="no_name">No Name</string>
    <string name="source_id">source_id</string>
    <string name="sp_s_name">sp_s_name</string>
    <string name="state">state</string>
    <string name="offline">No Connection !! \n You can look at the Cashed News or connect to the internet and try again</string>
    <string name="s_x">scroll_x</string>
    <string name="s_y">scroll_x</string>
    <string name="no_def">You Don\'t Have Default News Source</string>
    <string name="search">Search</string>
    <string name="no_search">No Search Input</string>
    <string name="is_s">is_search</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="search_for_something">Search For Something</string>
    <string name="advertisement">advertisement</string>

</resources>
